# nvjpeg_python_binding

./: CMakeLists.txt  main.cu  pybind11.cu  simple_decode.cu  simple_resize.cu  test.cu  test.py
